--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -45,7 +45,7 @@ body{
 </div>
 {% endfor %}
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your Email and password!</p>
+              <p class="text-white-50 mb-5">Please Enter your Username and password!</p>
 
 <form action="/shop/login/" method="post">{% csrf_token %}
               <div class="form-outline form-white mb-4">
