--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -89,7 +89,7 @@ const togglePassword = document.querySelector('#togglePassword');
                 
                 <a href="{% provider_login_url 'github' %}" class="text-white mx-1"><button class="btn btn-secondary"><i class="fa fa-github fa-lg"></i> GitHub</button></a>
 
-                <a href="{% provider_login_url 'google' method='js_sdk' %}" class="text-white"><button class="btn btn-danger"><i class="fa fa-google fa-lg"></i> Google</button></a>
+                <!-- <a href="{% provider_login_url 'google' method='js_sdk' %}" class="text-white"><button class="btn btn-danger"><i class="fa fa-google fa-lg"></i> Google</button></a> -->
               </div>
 
             </div>
