login form added

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -17,6 +17,16 @@
 </head>
 <body>
 
+<style>
+::-webkit-scrollbar {
+    width: 17px;
+    background-color: #343535
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #909596;
+}
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <a class="navbar-brand" id="nav">&nbsp;&nbsp;Welcome To My Awesome Cart !!</a>
