--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -17,6 +17,17 @@
 </head>
 <body>
 
+<style>
+::-webkit-scrollbar {
+    width: 17px;
+    background-color: #343535
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #909596;
+}
+</style>
+
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <a class="navbar-brand" id="nav">&nbsp;&nbsp;Welcome To My Awesome Cart !!</a>
@@ -38,7 +49,7 @@ body{
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
 
-            <div class="mb-md-5 mt-md-4 pb-5">
+            <div class="mb-md-0 mt-md-0 pb-0">
 {% for message in messages %}
 <div class="alert alert-danger" role="alert">
   {{message}}
@@ -53,14 +64,14 @@ body{
                 <input type="text" name="username" id="typeEmailX" class="form-control form-control-lg" />
               </div>
 
-              <div class="form-outline form-white mb-4">
+              <div class="form-outline form-white mb-2 my-0 mt-0">
                 <label class="form-label" for="typePasswordX">Password</label>
-                <input type="password" name="password" id="password" class="form-control form-control-lg" /><i class="fa fa-eye" id="togglePassword"style="margin-left: -30px; cursor: pointer;"> Show/hide Password</i></input>
+                <input type="password" name="password" id="password" class="form-control form-control-lg" /><p style="text-align:right;margin-bottom:-1.9rem"><i class="fa fa-eye my-1" id="togglePassword" style="text-align:right;"> Show/hide Password</i></p>
               </div>
 
-              <p class="small mb-2 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+              <p class="small mb-4 pb-lg-2" style="text-align:left;padding-bottom:20px;"><a class="text-white-50" href="#!">Forgot password?</a></p>
 
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+              <button class="btn btn-outline-light btn-lg px-5 mx-0 mt-0" type="submit">Login</button>
 
 </form>
 
@@ -82,7 +93,8 @@ const togglePassword = document.querySelector('#togglePassword');
 
 <p></p>
 <p></p>
-              <u><p class="small mb-1 pb-lg-1">Or Login With</p></u>
+              <p class="large mb-0 pb-lg-0">Or Login With</p>
+              <hr class="my-0">
 
 
               <div class="d-flex justify-content-center text-center mt-4 pt-1">
@@ -95,7 +107,7 @@ const togglePassword = document.querySelector('#togglePassword');
             </div>
 
             <div>
-              <p class="mt-0">Don't have an account? <a href="/shop/register" class="text-white-50 fw-bold">Sign Up</a></p>
+              <p class="mt-4 my-0">Don't have an account? <a href="/shop/register" class="text-white-50 fw-bold">Sign Up</a></p>
             </div>
 
           </div>
