--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -1,4 +1,5 @@
 {% extends 'shop/basic.html' %}
+{% block title %}Enter Order Details{% endblock %}
 {%block title%}Place Order{%endblock %}
 
 {% block css %}
