--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -31,12 +31,12 @@ body{
 <center>
 <img src="{% static 'shop\ezgif.com-gif-maker (2).gif' %}" alt="Nature" class="responsive" id="center"/>
 <h2>Your Payment was successful</h2>
-<h3>You Have Successfully Ordered the Product<br>Thank You! We will Deliver You the product at your Home very Soon..<br>Thank You For Choosing us.....!<br>Track your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></h3></center>
+<h3>You Have Successfully Ordered the Product<br>Thank You! We will Deliver You the product at your Home very Soon..<br>Track your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></h3></center>
   <br>
 {% else %}
 <br>
 <br>
-<h1>Payment failed, Try again! or Contact these Number:- +91 8409913276</h1>
+<h1>Payment failed, Try again! or Contact this Number:- +91 8409913276</h1>
 <br>
 {% endif %}
 
