--- a/templates/shop/seller_contactus.html
+++ b/templates/shop/seller_contactus.html
@@ -1,5 +1,5 @@
 {% extends 'shop/seller.html' %}
-{% block title %} Contact Us {% endblock %}
+{% block title %} Seller Contact Us {% endblock %}
 {% block body %}
 {%if user.is_authenticated%}
 <br>
