--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Login/Signup</title>
+  <title>Register</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
@@ -37,6 +37,27 @@
 body{
   background-color: #6a11cb;
 }
+.mb-5 {
+    margin-bottom: 2rem!important;
+}
+.p-5 {
+    padding: 2.2rem!important;
+}
+@media (max-width: 767px){
+.p-5 {
+    padding:0.3rem!important;
+}
+.row>* {
+  padding-right: calc(var(--bs-gutter-x) * .2);
+  padding-left: calc(var(--bs-gutter-x) * .2);
+}
+#register_text{
+  margin-top: 20px;
+}
+#register_button{
+  margin-bottom: 1.5rem!important;
+}
+}
 </style>
 
 
@@ -50,7 +71,7 @@ body{
 
             <div class="mb-md-2 mt-md-7 pb-9">
 
-              <h2 class="fw-bold mb-2 text-uppercase">Register</h2>
+              <h2 class="fw-bold mb-2 text-uppercase" id="register_text">Register</h2>
               <p class="text-white-50 mb-5">Please enter Some Details to Get Register</p>
 <form action="/shop/register/" method="post">{% csrf_token %}
               <div class="form-outline form-white mb-4">
@@ -82,6 +103,9 @@ body{
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit">Register</button>
 </form>
+<br>
+<a href="/shop/login"><p id="register_button" style="color:white; text-align:left"><i class="fa fa-angle-double-left"> Back To Login</i></p></a>
+
             </div>
           </div>
         </div>
