2 factor authentication imroved

--- a/templates/shop/verify_otp.html
+++ b/templates/shop/verify_otp.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<form action="/shop/register/" method="post">{% csrf_token %}
+<form action="/shop/verify_otp/" method="post">{% csrf_token %}
 
 <input name="otp">
 <button type="submit">Submit</button>
