--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -151,6 +151,9 @@ margin: 10px 10px 10px 10px;
 </style>
 
 
+<div style="background-color:red">{% for message in messages %}
+{{message}}
+{% endfor %}</div>
 
     <hr id="hori"></hr>
     <h5 id="cate">&nbsp;&nbsp;&bull;Newly Released <b><u>{{prod.0.category}}</u></b> Products</li></h5>
