--- a/templates/accounts/forget_password.html
+++ b/templates/accounts/forget_password.html
@@ -77,10 +77,29 @@ body{
   {{message}}
 </div>
 {% endfor %}
-              <h2 class="fw-bold mb-2 text-uppercase" id="login_text">Login</h2>
-              <p class="text-white-50 mb-5">Please Enter your Username and password!</p>
 
-<form action="/shop/login/" method="post">{% csrf_token %}
+
+
+{% if status == 200 %}
+<h2 class="fw-bold mb-2 text-uppercase" id="login_text">Enter The OTP</h2>
+<p class="text-white-50 mb-5">OTP Sent To given Username Email-id</p>
+
+
+<form action="/shop/forget_password/" method="POST">{% csrf_token %}
+    <div class="form-outline form-white mb-4">
+      <label class="form-label" for="otp">Enter OTP</label>
+      <input type="number" name="otp" id="otp" class="form-control form-control-lg" />
+    </div>
+    <br>
+    <button type="submit" class="btn btn-danger">Confirm</button>
+</form>
+
+{% else %}
+
+              <h2 class="fw-bold mb-2 text-uppercase" id="login_text">Reset Your Password</h2>
+              <p class="text-white-50 mb-5">Please Follow the Steps</p>
+
+<form action="/shop/forget_password/" method="POST">{% csrf_token %}
               <div class="form-outline form-white mb-4">
                 <label class="form-label" for="typeEmailX">Username</label>
                 <input type="text" name="username" id="typeEmailX" class="form-control form-control-lg" />
@@ -91,9 +110,19 @@ body{
                 <input type="password" name="password" id="password" class="form-control form-control-lg" /><p style="text-align:right;margin-bottom:-1.9rem"><i class="fa fa-eye my-1" id="togglePassword" style="text-align:right;"> Show/hide Password</i></p>
               </div>
 
-              <p class="small mb-4 pb-lg-2" style="text-align:left;padding-bottom:20px;"><a class="text-white-50" href="/shop/forget_password">Forgot password?</a></p>
+              <br>
 
-              <button class="btn btn-outline-light btn-lg px-5 mx-0 mt-0" type="submit">Login</button>
+
+
+              <div class="form-outline form-white mb-2 my-0 mt-0">
+                <label class="form-label" for="typePasswordX">Re-Enter Password</label>
+                <input type="password" name="re-password" id="password" class="form-control form-control-lg" /><p style="text-align:right;margin-bottom:-1.9rem"><i class="fa fa-eye my-1" id="togglePassword" style="text-align:right;"> Show/hide Password</i></p>
+              </div>
+
+              <br>
+              <br>
+
+              <button class="btn btn-outline-light btn-lg px-5 mx-0 mt-0" type="submit">Reset Password</button>
 
 </form>
 
@@ -114,21 +143,9 @@ const togglePassword = document.querySelector('#togglePassword');
 </script>
 <p></p>
 <br>
-              <p class="large mb-0 pb-lg-0">Or Login With</p>
-              <hr class="my-0">
-
-
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                
-                <a href="{% provider_login_url 'github' %}" class="text-white mx-1"><button class="btn btn-secondary"><i class="fa fa-github fa-lg"></i> GitHub</button></a>
-
-                <a href="{% provider_login_url 'google' method='js_sdk' %}" class="text-white"><button class="btn btn-danger"><i class="fa fa-google fa-lg"></i> Google</button></a>
-              </div>
-
-            </div>
 
             <div>
-              <p class="mt-4 my-0" id="sign_up_text">Don't have an account? <a href="/shop/register" class="text-white-50 fw-bold">Sign Up</a></p>
+              <a href="/shop/login" class="text-white-50 fw-bold"> Back To Login</a>
             </div>
 
           </div>
@@ -137,7 +154,7 @@ const togglePassword = document.querySelector('#togglePassword');
     </div>
   </div>
 </section>
-
+{% endif %}
 
 
  <!-- Optional JavaScript -->
