--- a/templates/admin_panel/base.html
+++ b/templates/admin_panel/base.html
@@ -1,4 +1,3 @@
-{% load custom_filter %}
 <!DOCTYPE html>
 <html lang="en" >
 
@@ -10,9 +9,6 @@
   
 <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
 <meta name="apple-mobile-web-app-title" content="CodePen">
-
-
-<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -364,73 +360,56 @@ html { height: 100%;}
         <p style="color:white">My Awesome Cart</p></div></div>
 
 
-       <li><a href="/shop/dashboard"><i class="fa fa-home" style="color:white;width:20px;height:20px;"></i>Dashboard</a></li>
+       <li><a href="/shop/admin_panel/dashboard"><i class="fa fa-home" style="color:white;width:20px;height:20px;"></i>DashBoard</a></li>
 
 
-       <li><a href="/shop/orderrequest"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i>Order request</a></li>
-
-       <li><a href="/shop/seller/contactus"><i class="material-icons" style="font-size:18px;">contacts</i> Contact us</a></li>
-
-
-       <li><a href="/shop/sellproduct"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>Sell Your Product</a></li>
-
-
-       <li><a href="/shop/yourproduct"><i class="fa fa-product-hunt " style="color:white;width:20px;height:20px;"></i>My Products</a></li>
-
-
-       <li><a href="/shop/seller/my_earning"><i class="fa fa-rupee " style="color:white;width:20px;height:20px;"></i>My Earnings</a></li>
-
+       <li><a href="/shop/admin_panel/send_bulk_email"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i>Send Bulk Email</a></li>
 
     
+      <li><a href="/shop/dashboard"><i class="fa fa-exchange"></i> Switch To Seller Mode</a></li>
+
       <li><a href="/shop"><i class="fa fa-exchange"></i> Switch To Buyer Mode</a></li>
 
-
-      {% if request.user|has_group:"admin" %}
-      <li><a href="/shop/admin_panel/dashboard"><i class="fa fa-exchange"></i> Switch To Admin Mode</a></li>
-      {% else %}
-      {% endif %} 
- 
-   
-      {% if request.user.is_authenticated %}
+{% if request.user.is_authenticated %}
       <div id="signout"><li><h5><a href="/signout">Sign Out <i class="fa fa-sign-out"></i></a></h5></li></div>
 {% else %}
 <div id="signout" class="container mx-2"><h5><a href="/"><button class="btn btn-danger">Login Now</button></a></h5></div>
       {% endif %}
-      
       </ul>
 
   </nav>
 
 
 
-
-<style>
-.navbarr {
-  overflow: hidden;
-  background-color: #212531;
-  position: fixed;
-  top: -1%;
-  width: 100%;
-  padding-top: 70px;
-  z-index: 999;
-}
-#signout{
-    padding-top: 140px;
-}
-</style>
-<div id="navbarr">
-  <nav class="navbarr navbar-expand-lg navbar-light" id="mainNav">
-            <div class="container mx-4">
+  <style>
+  .navbarr {
+    overflow: hidden;
+    background-color: #212531;
+    position: fixed;
+    top: -1%;
+    width: 100%;
+    z-index: 999;
+  }
+  #signout{
+      padding-top: 140px;
+  }
+  </style>
+  <div id="navbarr">
+    <nav class="navbarr navbar-expand-lg navbar-light" id="mainNav">
+              <div class="container mx-4">
 
 
-<button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
-    <span class="hamb-top"></span>
-    <span class="hamb-middle"></span>
-    <span class="hamb-bottom"></span>
-</button>
+  <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas" id="jj">
+      <span class="hamb-top"></span>
+      <span class="hamb-middle"></span>
+      <span class="hamb-bottom"></span>
+  </button>
 
 
-
+                <form class="d-flex" id="kk">
+                  <input class="form-control" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
+                  <button class="btn btn-outline-success mx-2" id="search_button" type="submit">Search</button>
+                </form>
                     </ul>
                 </div>
             </div>
@@ -440,6 +419,62 @@ html { height: 100%;}
 <br>
 
 
+
+<style>
+.d-flex{
+  margin-bottom:10px;
+  width:90%;
+  margin-left:120px;
+  padding-right: 5.5px;
+  margin-top: 10px;
+  padding-top: 8px;
+}
+@media (max-width: 770px) {
+#text-head{
+  display: none;
+}
+#search{
+  width: 40%;
+}
+.d-flex{
+  margin-bottom:10px;
+  width:80%;
+  margin-left:55px;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+}
+@media (max-width: 445px) {
+#text-head{
+  display: none;
+}
+#search{
+  width: 100%;
+}
+.d-flex{
+  margin-bottom:10px;
+  width:80%;
+  margin-left:55px;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+}
+@media (max-width: 286px) {
+.d-flex{
+  margin-bottom:10px;
+  width:76%;
+  margin-left:55px;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+#text-head{
+  display: none;
+}
+#search{
+  width: 100%;
+}
+}
+</style>
 
 
 
