--- a/templates/seller/my_earning.html
+++ b/templates/seller/my_earning.html
@@ -11,6 +11,9 @@
 #chart{
 	width:500px;
 }
+#table_col{
+  color: white;
+}
 td,table{
 	border-bottom:1px solid #343a45;
 	border-right: 1px solid #343a45;
@@ -29,11 +32,14 @@ th {
 .table{
 	width: 95%;
 }
+#table_col{
+  font-weight: bold;
+}
 #table_col, #table_row{
 	font-size:9.9px;
 }
 #chart{
-	width:280px;
+	width:95%;
 }
 }
 </style>
