--- a/templates/accounts/forget_password.html
+++ b/templates/accounts/forget_password.html
@@ -72,11 +72,17 @@ body{
 
             <div class="mb-md-0 mt-md-0 pb-0">
               
-{% for message in messages %}
-<div class="alert alert-danger" role="alert">
-  {{message}}
-</div>
-{% endfor %}
+              {% for message in messages %}
+              <div id="alert" class="alert alert-{{ message.tags }}">{{message}}
+              </div>
+                
+              <script type="text/javascript">
+              setTimeout(function () {
+                  $('#alert').alert('close');
+              }, 4000);
+              </script>
+              {% endfor %}
+              
 
 
 
@@ -106,7 +112,7 @@ body{
               </div>
 
               <div class="form-outline form-white mb-2 my-0 mt-0">
-                <label class="form-label" for="typePasswordX">Password</label>
+                <label class="form-label" for="typePasswordX">Enter New Password</label>
                 <input type="password" name="password" id="password" class="form-control form-control-lg" /><p style="text-align:right;margin-bottom:-1.9rem"><i class="fa fa-eye my-1" id="togglePassword" style="text-align:right;"> Show/hide Password</i></p>
               </div>
 
@@ -115,7 +121,7 @@ body{
 
 
               <div class="form-outline form-white mb-2 my-0 mt-0">
-                <label class="form-label" for="typePasswordX">Re-Enter Password</label>
+                <label class="form-label" for="typePasswordX">Re-Enter New Password</label>
                 <input type="password" name="re-password" id="password" class="form-control form-control-lg" /><p style="text-align:right;margin-bottom:-1.9rem"><i class="fa fa-eye my-1" id="togglePassword" style="text-align:right;"> Show/hide Password</i></p>
               </div>
 
